<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pt.ulisboa.tecnico.cmov.locmess.activities.RestritionOptionActivity"
    tools:showIn="@layout/activity_restrition_option">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/radioButton_everyone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/everyone" />

            <RadioButton
                android:id="@+id/radioButton_white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/white_list" />

            <RadioButton
                android:id="@+id/radioButton_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/black_list" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingTop="24dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layout_everyone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="This Post will be shown to everyone."
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Press the button to continue!"
                    android:textAlignment="center" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_white"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="This post will only be shown to this users."
                    android:textAlignment="center" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <AutoCompleteTextView
                        android:id="@+id/autocomplete_white"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:completionThreshold="1"
                        android:hint="@string/search_group" />

                    <Button
                        android:id="@+id/button_add_white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Add" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_white_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/white_placeholder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Nothing added!"
                        android:textAlignment="center" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_black"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="This post won't be shown to this users."
                    android:textAlignment="center" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <AutoCompleteTextView
                        android:id="@+id/autocomplete_black"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:completionThreshold="1"
                        android:hint="@string/search_group" />

                    <Button
                        android:id="@+id/button_add_black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Add" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_black_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/black_placeholder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Nothing added!"
                        android:textAlignment="center" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
